--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-discord.py~=1.4.1
-python-dotenv~=0.14.0
-nest-asyncio~=1.4.0
-praw~=7.1.0
-requests~=2.24.0
+discord.py
+python-dotenv
+nest-asyncio
+praw
+requests
