--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,5 @@
-discord.py
-python-dotenv~=0.15.0
-nest-asyncio
-praw
-requests
-mcstatus~=4.1.0
-spotipy~=2.16.1
-youtube-search-python
-rich~=9.3.0
+python-dotenv>=0.15.0
+mcstatus>=5.1.1
+spotipy>=2.16.1
+rich>=9.9.0
+wavelink>=0.9.6
