--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 discord.py>=1.6.0
-python-dotenv>=0.15.0
-spotipy>=2.16.1
-rich>=9.9.0
-SQLAlchemy>=1.3.22
+python-dotenv>=0.17.0
+spotipy>=2.17.1
+rich>=10.1.0
+SQLAlchemy>=1.4.5
 youtube-search-python
 psycopg2
-wavelink
+wavelink>=0.9.9
+requests>=2.25.1
