--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,6 @@ spotipy>=2.17.1
 rich>=10.1.0
 SQLAlchemy>=1.4.5
 youtube-search-python
-psycopg2
+psycopg2-binary
 wavelink>=0.9.9
 requests>=2.25.1
