--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-discord.py>=1.6.0
-discord-py-slash-command>=1.1.2
-python-dotenv>=0.17.0
-spotipy>=2.17.1
-rich>=10.1.0
-SQLAlchemy>=1.4.5
+discord.py
+discord-py-slash-command
+python-dotenv
+spotipy
+rich
+SQLAlchemy
 youtube-search-python
 psycopg2-binary
-wavelink>=0.9.9
-requests>=2.25.1
+wavelink
+requests
